m/n/b/mkpayload: support multiple initramfs files
Linux supports multiple concatinated initramfs files and requires using
multiple to provide certain data like microcode for the early loader.
This allows building such payloads with mkpayload.

Change-Id: Ie7ee7886bbfe481d7b723e0476a26ee26425a0b6
Reviewed-on: https://review.monogon.dev/c/monogon/+/548
Reviewed-by: Mateusz Zalega <mateusz@monogon.tech>

--- a/metropolis/installer/test/BUILD.bazel
+++ b/metropolis/installer/test/BUILD.bazel
@@ -34,7 +34,7 @@ go_library(
 efi_unified_kernel_image(
     name = "kernel",
     cmdline = "loglevel=0 console=ttyS0",
-    initramfs = "//metropolis/installer:initramfs",
+    initrd = ["//metropolis/installer:initramfs"],
     kernel = "//third_party/linux",
     visibility = ["//visibility:private"],
 )
