--- a/metropolis/installer/BUILD.bazel
+++ b/metropolis/installer/BUILD.bazel
@@ -40,7 +40,7 @@ os_release(
 efi_unified_kernel_image(
     name = "kernel",
     cmdline = "console=ttyS0,115200 console=tty0 quiet",
-    initramfs = ":initramfs",
+    initrd = [":initramfs"],
     kernel = "//third_party/linux",
     os_release = ":installer-release-info",
     visibility = ["//visibility:public"],
