metropolis: use microcode
This ties together all previous work and actually makes the installer
and OS use microcode via the early microcode loader.

Change-Id: I4e3214c30e4eff1d231d462fceddd2e353d28731
Reviewed-on: https://review.monogon.dev/c/monogon/+/549
Reviewed-by: Sergiusz Bazanski <serge@monogon.tech>

--- a/metropolis/installer/BUILD.bazel
+++ b/metropolis/installer/BUILD.bazel
@@ -40,7 +40,10 @@ os_release(
 efi_unified_kernel_image(
     name = "kernel",
     cmdline = "console=ttyS0,115200 console=tty0 quiet",
-    initrd = [":initramfs"],
+    initrd = [
+        "//metropolis/node:ucode",
+        ":initramfs",
+    ],
     kernel = "//third_party/linux",
     os_release = ":installer-release-info",
     visibility = ["//visibility:public"],
