m/n/core: only run debug service in debug build
This excludes the debug service from non-debug builds as it exposes a
bunch of unauthenticated interfaces for debugging to the world.
The Kubernetes tests were the last user of this service but getting
Kubernetes credentials is now handled by an authenticated production
service (the authproxy).
Some parts of the debug service functionality, namely GetLogs will also
be needed outside of debug builds, but nothing depends on its
availability so we can do this right away.

Change-Id: I5ba3d2853c69ae295d6224b359b36c160b58c430
Reviewed-on: https://review.monogon.dev/c/monogon/+/552
Reviewed-by: Sergiusz Bazanski <serge@monogon.tech>

--- a/metropolis/node/core/BUILD.bazel
+++ b/metropolis/node/core/BUILD.bazel
@@ -4,12 +4,17 @@ go_library(
     name = "go_default_library",
     # keep
     srcs = [
-        "debug_service.go",
         "main.go",
         "mounts.go",
     ] + select({
-        "//metropolis/node:debug_build": ["delve_enabled.go"],
-        "//conditions:default": ["delve_disabled.go"],
+        "//metropolis/node:debug_build": [
+            "debug_service_enabled.go",
+            "delve_enabled.go",
+        ],
+        "//conditions:default": [
+            "debug_service_disabled.go",
+            "delve_disabled.go",
+        ],
     }),
     importpath = "source.monogon.dev/metropolis/node/core",
     visibility = ["//visibility:private"],
