m/n/b/fwprune: process links from metadata file
The linux-firmware repository has a metadata file called WHENCE which
contains mostly license and origin information, but critically it also
contains data for symbolic links which are not materialized inside the
repo itself. So we need to parse that file and create these symlinks
ourselves.

Change-Id: I9e6973e60d6f06e844dc879f658c9dd1913c432d
Reviewed-on: https://review.monogon.dev/c/monogon/+/555
Reviewed-by: Mateusz Zalega <mateusz@monogon.tech>

--- a/metropolis/node/BUILD.bazel
+++ b/metropolis/node/BUILD.bazel
@@ -27,6 +27,7 @@ fsspec_linux_firmware(
     name = "firmware",
     firmware_files = ["@linux-firmware//:all_files"],
     kernel = "//third_party/linux",
+    metadata = "@linux-firmware//:metadata",
 )
 
 cpio_ucode(
