--- a/metropolis/pkg/tpm/BUILD.bazel
+++ b/metropolis/pkg/tpm/BUILD.bazel
@@ -11,12 +11,13 @@ go_library(
     deps = [
         "//metropolis/pkg/logtree:go_default_library",
         "//metropolis/pkg/sysfs:go_default_library",
-        "@com_github_gogo_protobuf//proto:go_default_library",
+        "//metropolis/pkg/tpm/proto:go_default_library",
+        "@com_github_golang_protobuf//proto:go_default_library",
         "@com_github_google_go_tpm//tpm2:go_default_library",
         "@com_github_google_go_tpm//tpmutil:go_default_library",
-        "@com_github_google_go_tpm_tools//proto:go_default_library",
         "@com_github_google_go_tpm_tools//tpm2tools:go_default_library",
         "@com_github_pkg_errors//:go_default_library",
+        "@org_golang_x_crypto//nacl/secretbox:go_default_library",
         "@org_golang_x_sys//unix:go_default_library",
     ],
 )
