--- a/metropolis/cli/metroctl/BUILD.bazel
+++ b/metropolis/cli/metroctl/BUILD.bazel
@@ -26,6 +26,7 @@ go_library(
         "@com_github_spf13_cobra//:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_client_go//pkg/apis/clientauthentication/v1beta1:go_default_library",
+        "@org_golang_google_grpc//:go_default_library",
     ],
 )
 
