--- a/metropolis/node/core/localstorage/BUILD.bazel
+++ b/metropolis/node/core/localstorage/BUILD.bazel
@@ -16,6 +16,7 @@ go_library(
         "//metropolis/node/core/localstorage/declarative",
         "//metropolis/pkg/tpm",
         "//metropolis/proto/api",
+        "//metropolis/proto/common",
         "//metropolis/proto/private",
         "@org_golang_google_protobuf//proto",
         "@org_golang_x_sys//unix",
