m/installer: bump test size to "medium"
I found the test timing out at times when the CI setup was especially
busy, possibly due to lower disk I/O speeds. I think it's reasonable to
give this one more time.

Change-Id: I992ef3c7df3afc65bba628b3b443f74bb37c2963
Reviewed-on: https://review.monogon.dev/c/monogon/+/666
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>

--- a/metropolis/installer/test/BUILD.bazel
+++ b/metropolis/installer/test/BUILD.bazel
@@ -3,7 +3,7 @@ load("//metropolis/node/build:efi.bzl", "efi_unified_kernel_image")
 
 go_test(
     name = "installer",
-    size = "small",
+    size = "medium",
     data = [
         ":kernel",
         "//metropolis/installer/test/testos:testos_bundle",
