m/n/core: automatically update ClusterDirectory
This extends the hostsfile service to also update ClusterDirectory
whenever cluster member address information is received.

Change-Id: I30dcd15ba4a59f13e48501ff1032c189e2e961af
Reviewed-on: https://review.monogon.dev/c/monogon/+/662
Reviewed-by: Sergiusz Bazanski <serge@monogon.tech>

--- a/metropolis/node/core/network/hostsfile/BUILD.bazel
+++ b/metropolis/node/core/network/hostsfile/BUILD.bazel
@@ -11,7 +11,9 @@ go_library(
         "//metropolis/node/core/network",
         "//metropolis/node/core/roleserve",
         "//metropolis/pkg/supervisor",
+        "//metropolis/proto/common",
         "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_google_protobuf//proto",
         "@org_golang_x_sys//unix",
     ],
 )
