--- a/.bazelrc
+++ b/.bazelrc
@@ -2,7 +2,12 @@ startup --batch_cpu_scheduling --io_nice_level 7
 build --jobs 12 --local_ram_resources=HOST_RAM*0.5
 test --jobs 12 --test_output=errors
 
-# Build with SELinux, needed for containerd & kubelet
+# selinux:
+#     build with SELinux (containerd, kubelet)
+# no_zfs,no_aufs,no_devicemapper:
+#     disable containerd features we don't need
+# providerless,dockerless:
+#     build k8s without cloud provider and docker support
 build --define gotags=selinux,seccomp,no_zfs,no_aufs,no_devicemapper,providerless,dockerless
 
 # Build with C++17.
