.bazelrc: allow specifying a .bazelrc.user
This enables users to add their own local setting overrides
such as defaulting to debug mode.

Change-Id: Ibb27678be9994653d93c9a6931c640ab84301c3f
Reviewed-on: https://review.monogon.dev/c/monogon/+/758
Tested-by: Jenkins CI
Reviewed-by: Sergiusz Bazanski <serge@monogon.tech>

--- a/.bazelrc
+++ b/.bazelrc
@@ -31,3 +31,6 @@ build --host_crosstool_top=@bazel_tools//tools/cpp:toolchain
 
 # Load CI bazelrc if present.
 try-import %workspace%/ci.bazelrc
+
+# Load custom per-user settings.
+try-import %workspace%/.bazelrc.user
