m/node: refactor panic handling
This change significantly changes how we handle panics and runtime
errors in our core process. The explicit panic handler is gone and has
been replaced by a file storing the panic persistently and
the informational message has been moved out to minit.
The runtime log file is stored on the ESP to allow for debugging if the
node crashes before unlocking and gets reset every boot. It also dumps
its previous state into the logtree to allow administrators to look into
these errors without launching another OS to dump the file.

Change-Id: I3503eeced2da0bbcb6301a6c39e502bbb9afa827
Reviewed-on: https://review.monogon.dev/c/monogon/+/772
Tested-by: Jenkins CI
Reviewed-by: Sergiusz Bazanski <serge@monogon.tech>

--- a/metropolis/node/core/BUILD.bazel
+++ b/metropolis/node/core/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
     srcs = [
         "main.go",
         "mounts.go",
+        "panichandler.go",
         "pstore.go",
     ] + select({
         "//metropolis/node:debug_build": [
