--- a/metropolis/test/e2e/BUILD.bazel
+++ b/metropolis/test/e2e/BUILD.bazel
@@ -2,10 +2,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "e2e",
-    srcs = [
-        "kubernetes_helpers.go",
-        "utils.go",
-    ],
+    srcs = ["kubernetes_helpers.go"],
     importpath = "source.monogon.dev/metropolis/test/e2e",
     visibility = ["//metropolis/test:__subpackages__"],
     deps = [
@@ -37,6 +34,7 @@ go_test(
         "//metropolis/node/core/rpc",
         "//metropolis/proto/api",
         "//metropolis/test/launch/cluster",
+        "//metropolis/test/util",
         "@io_k8s_api//core/v1:core",
         "@io_k8s_apimachinery//pkg/api/resource",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
