m/p/cmd: implement RunCommand
This implements a new utility function RunCommand, based on existing
m/installer/test implementation.

RunCommand will be used in the upcoming metroctl test implementation.

Change-Id: Ieb98acada7e7408249da0e289861674e80b4d581
Reviewed-on: https://review.monogon.dev/c/monogon/+/789
Tested-by: Jenkins CI
Reviewed-by: Sergiusz Bazanski <serge@monogon.tech>

--- a/metropolis/installer/test/BUILD.bazel
+++ b/metropolis/installer/test/BUILD.bazel
@@ -23,7 +23,7 @@ go_library(
         "//metropolis/cli/metroctl/core",
         "//metropolis/cli/pkg/datafile",
         "//metropolis/node/build/mkimage/osimage",
-        "//metropolis/pkg/logbuffer",
+        "//metropolis/pkg/cmd",
         "//metropolis/proto/api",
         "@com_github_diskfs_go_diskfs//:go-diskfs",
         "@com_github_diskfs_go_diskfs//disk",
