m/t/launch: use cluster resolver
This makes the cluster launch framework use a resolver to connect to
cluster nodes after credential escrow has been performed.

Change-Id: I09b0ec50bdb758e0c91e505a3c51839bb274f959
Reviewed-on: https://review.monogon.dev/c/monogon/+/797
Tested-by: Jenkins CI
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>

--- a/metropolis/test/launch/cluster/BUILD.bazel
+++ b/metropolis/test/launch/cluster/BUILD.bazel
@@ -22,6 +22,7 @@ go_library(
         "//metropolis/node",
         "//metropolis/node/core/identity",
         "//metropolis/node/core/rpc",
+        "//metropolis/node/core/rpc/resolver",
         "//metropolis/pkg/logbuffer",
         "//metropolis/proto/api",
         "//metropolis/proto/common",
