--- a/metropolis/node/core/rpc/resolver/BUILD.bazel
+++ b/metropolis/node/core/rpc/resolver/BUILD.bazel
@@ -15,6 +15,7 @@ go_library(
         "//metropolis/proto/common",
         "@com_github_cenkalti_backoff_v4//:backoff",
         "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_google_grpc//keepalive",
         "@org_golang_google_grpc//resolver",
     ],
 )
