m/c/metroctl: embed installer and add argument for bundle
This embeds the installer in metroctl for easier distribution and adds
an option for passing a bundle path explicitly.

For the MVP this allows users to download metroctl and a bundle
separately and make an installer out of them.

Change-Id: I00f481c30a2e843d336248aad0dc4030d03c4576
Reviewed-on: https://review.monogon.dev/c/monogon/+/821
Tested-by: Jenkins CI
Reviewed-by: Mateusz Zalega <mateusz@monogon.tech>

--- a/metropolis/cli/metroctl/BUILD.bazel
+++ b/metropolis/cli/metroctl/BUILD.bazel
@@ -10,8 +10,10 @@ go_library(
         "takeownership.go",
     ],
     data = [
-        "//metropolis/installer:kernel",
         "//metropolis/node:bundle",
+    ],
+    embedsrcs = [
+        "//metropolis/installer:kernel",  #keep
     ],
     importpath = "source.monogon.dev/metropolis/cli/metroctl",
     visibility = ["//visibility:private"],
