--- a/metropolis/cli/metroctl/BUILD.bazel
+++ b/metropolis/cli/metroctl/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
         "install.go",
         "k8scredplugin.go",
         "main.go",
+        "rpc.go",
         "takeownership.go",
     ],
     data = [
@@ -23,6 +24,7 @@ go_library(
         "//metropolis/cli/pkg/datafile",
         "//metropolis/node",
         "//metropolis/node/core/rpc",
+        "//metropolis/node/core/rpc/resolver",
         "//metropolis/proto/api",
         "@com_github_adrg_xdg//:xdg",
         "@com_github_spf13_cobra//:cobra",
@@ -31,6 +33,7 @@ go_library(
         "@io_k8s_client_go//tools/clientcmd",
         "@io_k8s_client_go//tools/clientcmd/api",
         "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_x_net//proxy",
     ],
 )
 
