m/c/metroctl: implement the approve command
This adds a command to approve new nodes, and list nodes pending
approval.

Change-Id: I8f91d6e549c1eae298c5a4a6f11b53ae70a77f79
Reviewed-on: https://review.monogon.dev/c/monogon/+/825
Tested-by: Jenkins CI
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>

--- a/metropolis/cli/metroctl/BUILD.bazel
+++ b/metropolis/cli/metroctl/BUILD.bazel
@@ -3,6 +3,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 go_library(
     name = "metroctl_lib",
     srcs = [
+        "approve.go",
         "credentials.go",
         "install.go",
         "k8scredplugin.go",
@@ -23,6 +24,7 @@ go_library(
         "//metropolis/cli/pkg/context",
         "//metropolis/cli/pkg/datafile",
         "//metropolis/node",
+        "//metropolis/node/core/identity",
         "//metropolis/node/core/rpc",
         "//metropolis/node/core/rpc/resolver",
         "//metropolis/proto/api",
