github-actions: monorepo adjustments
We're going to tag Metropolis releases metropolis-v... , adjust for that.

Change-Id: I37fcd0b1e785e7f131777823ff7746d0e2316ef8
Reviewed-on: https://review.monogon.dev/c/monogon/+/828
Reviewed-by: Leopold Schabel <leo@monogon.tech>
Tested-by: Jenkins CI

--- a/.github/workflows/release-metropolis.yml
+++ b/.github/workflows/release-metropolis.yml
@@ -2,7 +2,7 @@ name: Publish release artifacts and docs for new tags
 on:
   push:
     tags:
-      - "v*"
+      - "metropolis-v*"
 jobs:
   publish:
     runs-on: gha-trusted
