--- a/metropolis/proto/common/BUILD.bazel
+++ b/metropolis/proto/common/BUILD.bazel
@@ -6,6 +6,9 @@ proto_library(
     name = "common_proto",
     srcs = ["common.proto"],
     visibility = ["//metropolis:__subpackages__"],
+    deps = [
+        "@com_google_protobuf//:timestamp_proto",
+    ],
 )
 
 go_proto_library(
