--- a/metropolis/pkg/logtree/BUILD.bazel
+++ b/metropolis/pkg/logtree/BUILD.bazel
@@ -21,6 +21,7 @@ go_library(
     deps = [
         "//metropolis/pkg/logbuffer",
         "//metropolis/proto/api",
+        "@org_golang_google_protobuf//types/known/timestamppb",
     ],
 )
 
