--- a/metropolis/proto/api/BUILD.bazel
+++ b/metropolis/proto/api/BUILD.bazel
@@ -15,6 +15,7 @@ proto_library(
         "//metropolis/proto/common:common_proto",
         "//metropolis/proto/ext:ext_proto",
         "@com_google_protobuf//:duration_proto",
+        "@com_google_protobuf//:timestamp_proto",
     ],
 )
 
