--- a/metropolis/node/BUILD.bazel
+++ b/metropolis/node/BUILD.bazel
@@ -147,6 +147,7 @@ genrule(
         "//metropolis/node/build/mkimage",
     ],
     visibility = [
+        "//metropolis/cli/metroctl/test:__subpackages__",
         "//metropolis/test/e2e:__subpackages__",
         "//metropolis/test/launch:__subpackages__",
     ],
@@ -214,6 +215,7 @@ EOF
     cp tpm/ca/signkey.pem $(location tpm/signkey.pem)
     """,
     visibility = [
+        "//metropolis/cli/metroctl/test:__subpackages__",
         "//metropolis/test/e2e:__subpackages__",
         "//metropolis/test/launch:__subpackages__",
     ],
