m/c/metroctl: implement add, remove role commands
This adds commands accomodating node role modification.

Change-Id: I3532081fa5e7ce521c3bd90cc4ebf46fec4bf168
Reviewed-on: https://review.monogon.dev/c/monogon/+/851
Reviewed-by: Sergiusz Bazanski <serge@monogon.tech>
Tested-by: Jenkins CI

--- a/metropolis/cli/metroctl/BUILD.bazel
+++ b/metropolis/cli/metroctl/BUILD.bazel
@@ -13,6 +13,7 @@ go_library(
         "main.go",
         "node.go",
         "rpc.go",
+        "set.go",
         "takeownership.go",
     ],
     data = [
