third_party: add libpg_query and sqlc
This adds sqlc, a SQL query code generator for Go (and other languages).
It in turn requires pganalyze's libpg_query, which is a C library for
parsing PostgreSQL queries.

To test:

   $ bazel build @com_github_kyleconroy_sqlc//cmd/sqlc

In the future this will be used by Bazel rules to generate sources at
build time.

Change-Id: I369c9ab503e8ce6952fd3f73c233dd3d59922358
Reviewed-on: https://review.monogon.dev/c/monogon/+/882
Tested-by: Jenkins CI
Reviewed-by: Leopold Schabel <leo@monogon.tech>

--- a/.bazelrc
+++ b/.bazelrc
@@ -13,7 +13,9 @@ test --jobs 12 --test_output=errors
 #     disable containerd features we don't need
 # providerless,dockerless:
 #     build k8s without cloud provider and docker support
-build --define gotags=selinux,seccomp,no_zfs,no_aufs,no_devicemapper,providerless,dockerless
+# nowasm:
+#     disable wasm plugin support in sqlc
+build --define gotags=selinux,seccomp,no_zfs,no_aufs,no_devicemapper,providerless,dockerless,nowasm
 
 # Build with C++17.
 build --cxxopt=-std=c++17
