c/bmaas/bmdb: add Agent{Started,Heartbeat} tags and queries
This should be the required tags and queries for the first interactions
with the Shepherd subsystem.

Change-Id: I8c663803cfd936b11c59bce7db5abc94b99dd1db
Reviewed-on: https://review.monogon.dev/c/monogon/+/962
Tested-by: Jenkins CI
Reviewed-by: Mateusz Zalega <mateusz@monogon.tech>

--- a/cloud/bmaas/bmdb/BUILD.bazel
+++ b/cloud/bmaas/bmdb/BUILD.bazel
@@ -20,7 +20,10 @@ go_library(
 
 go_test(
     name = "bmdb_test",
-    srcs = ["sessions_test.go"],
+    srcs = [
+        "queries_test.go",
+        "sessions_test.go",
+    ],
     data = [
         "@cockroach",
     ],
