c/bmaas/bmdb/model: split query files
This was starting to become slightly unwieldy.

Change-Id: I8f9d63ff6f844f1452fca2a98d253a9582a3ee8d
Reviewed-on: https://review.monogon.dev/c/monogon/+/1085
Tested-by: Jenkins CI
Reviewed-by: Leopold Schabel <leo@monogon.tech>

--- a/cloud/bmaas/bmdb/model/BUILD.bazel
+++ b/cloud/bmaas/bmdb/model/BUILD.bazel
@@ -7,7 +7,9 @@ sqlc_go_library(
     importpath = "source.monogon.dev/cloud/bmaas/bmdb/model",
     migrations = glob(["migrations/*sql"]),
     queries = [
-        "queries.sql",
+        "queries_base.sql",
+        "queries_tags.sql",
+        "queries_workflows.sql",
     ],
 )
 
