--- a/.bazelrc
+++ b/.bazelrc
@@ -4,8 +4,7 @@ build --incompatible_strict_action_env=true
 
 # Build resources
 startup --batch_cpu_scheduling --io_nice_level 7
-build --jobs 12 --local_ram_resources=HOST_RAM*0.5
-test --jobs 12 --test_output=errors
+test --test_output=errors
 
 # selinux:
 #     build with SELinux (containerd, kubelet)
