c/agent/api: add takeover API
This adds two messages to interact with the takeover process in an
automated way.

Change-Id: I866d418ae18d86e0b8be40c73d49b86a3ddfe242
Reviewed-on: https://review.monogon.dev/c/monogon/+/1071
Reviewed-by: Mateusz Zalega <mateusz@monogon.tech>
Tested-by: Jenkins CI

--- a/cloud/agent/api/BUILD.bazel
+++ b/cloud/agent/api/BUILD.bazel
@@ -4,7 +4,10 @@ load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
 
 proto_library(
     name = "api_proto",
-    srcs = ["agent.proto"],
+    srcs = [
+        "agent.proto",
+        "takeover.proto",
+    ],
     visibility = ["//visibility:public"],
 )
 
