--- a/metropolis/test/launch/cli/launch-multi2/BUILD.bazel
+++ b/metropolis/test/launch/cli/launch-multi2/BUILD.bazel
@@ -1,4 +1,5 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
+load("@bazel_skylib//rules:native_binary.bzl", "native_test")
 
 go_library(
     name = "launch-multi2_lib",
@@ -12,7 +13,7 @@ go_library(
 )
 
 go_binary(
-    name = "launch-multi2",
+    name = "launch-multi2_bin",
     data = [
         "//metropolis/node:image",
         "//metropolis/node:swtpm_data",
@@ -23,4 +24,12 @@ go_binary(
     ],
     embed = [":launch-multi2_lib"],
     visibility = ["//:__pkg__"],
+)
+
+native_test(
+    name = "launch-multi2",
+    src = ":launch-multi2_bin",
+    out = "launch-multi2",
+    tags = ["manual"],
+    visibility = ["//visibility:public"],
 )
