--- a/metropolis/test/launch/cli/launch/BUILD.bazel
+++ b/metropolis/test/launch/cli/launch/BUILD.bazel
@@ -1,4 +1,5 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
+load("@bazel_skylib//rules:native_binary.bzl", "native_test")
 
 go_library(
     name = "launch_lib",
@@ -14,7 +15,7 @@ go_library(
 )
 
 go_binary(
-    name = "launch",
+    name = "launch_bin",
     data = [
         "//metropolis/node:image",
         "//metropolis/node:swtpm_data",
@@ -22,4 +23,14 @@ go_binary(
     ],
     embed = [":launch_lib"],
     visibility = ["//:__pkg__"],
+)
+
+# Wrap the binary in a native_test so that we can run it with the
+# `bazel test` command inside the sandbox.
+native_test(
+    name = "launch",
+    src = ":launch_bin",
+    out = "launch",
+    tags = ["manual"],
+    visibility = ["//visibility:public"],
 )
